--- a/manifests/05_app-of-apps/argocd-app.yaml
+++ b/manifests/05_app-of-apps/argocd-app.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: parent-app
+  name: argocd-app
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/t-kobayashi-da/test-k8s-argocd.git
     targetRevision: main
-    path: manifests/05_app-of-apps
+    path: manifests/05_app-of-apps/argocd
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
