--- a/manifests/05_app-of-apps/nginx-app.yaml
+++ b/manifests/05_app-of-apps/nginx-app.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: parent-app
+  name: nginx-app
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/t-kobayashi-da/test-k8s-argocd.git
     targetRevision: main
-    path: manifests/05_app-of-apps
+    path: manifests/05_app-of-apps/nginx
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: default
   syncPolicy:
     automated:
       prune: true
