--- a/manifests/05_app-of-apps/argocd/install.yaml
+++ b/manifests/05_app-of-apps/argocd/install.yaml
@@ -8,21 +8,27 @@ kind: Deployment
 metadata:
   name: argocd-server
   namespace: argocd
+  labels:
+    app.kubernetes.io/name: argocd-server
+    app.kubernetes.io/component: server
+    app.kubernetes.io/part-of: argocd
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: argocd-server
-    template:
-      metadata:
-        labels:
-          app: argocd-server
-      spec:
-        containers:
-        - name: argocd-server
-          image: argoproj/argocd:v2.9.13
-          ports:
-          - containerPort: 8080
+      app.kubernetes.io/name: argocd-server
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: argocd-server
+        app.kubernetes.io/component: server
+        app.kubernetes.io/part-of: argocd
+    spec:
+      containers:
+      - name: argocd-server
+        image: argoproj/argocd:v2.9.13
+        ports:
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -36,4 +42,4 @@ spec:
     - protocol: TCP
       port: 443
       targetPort: 8080
-  type: ClusterIP
+  type:
