--- a/manifests/05_app-of-apps/argocd/install.yaml
+++ b/manifests/05_app-of-apps/argocd/install.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: argocd-server
-        image: ghcr.io/argoproj/argocd:v2.12.13
+        image: quay.io/argoproj/argocd:v3.1.5
         ports:
         - containerPort: 8080
 ---
